--- a/app/less/various.less
+++ b/app/less/various.less
@@ -638,10 +638,9 @@ footer, .push {
 /* Slider */
 #logo {
   float: left;
-  width: 180px;
+  width: 181px;
   background-color: @color-navy-blue;
   border-right: 1px solid #e4e5e7;
-  padding: 9px 20px 6px 18px;
   height: 62px;
   text-align: center;
 }
@@ -653,8 +652,8 @@ footer, .push {
 }
 
 #logo img {
-  width: 100%;
-  height: 44px;
+  width: 180px;
+  height: 61px;
 }
 
 #logo.light-version {
@@ -716,6 +715,38 @@ footer, .push {
 }
 
 /* Menu */
+
+#header-nav {
+  list-style: none;
+  margin-left: -32px;
+}
+
+#header-nav li a {
+  font-size: 15px;
+  font-variant: small-caps;
+  color: #9B9B9B;
+  display: inline-block;
+  padding: 11px 0;
+}
+
+#header-nav li {
+  float: left;
+  margin-right: 20px;
+  height: 42px;
+}
+
+#header-nav li a:hover, #header-nav li a:focus {
+  color: #444;
+}
+
+#header-nav li.active {
+  border-bottom: 2px solid #82BC4B;
+}
+
+#header-nav li.active a {
+  color: #444;
+}
+
 .side-menu {
   width: 180px;
   height: 71px;
