--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -121,7 +121,7 @@
 
         <ul side-navigation class="nav" id="side-menu" style="border-top: 1px solid #ddd; margin-bottom: 50px;">
 
-            <li class="active" tour-step order="1" title="People and Companies" content="To view people by role, or sort companies by revenue, visit the People and Company pages." placement="right">
+            <li class="active">
 
                 <ul class="nav nav-second-level">
                     <li>
