--- a/app/less/various.less
+++ b/app/less/various.less
@@ -657,7 +657,7 @@ footer, .push {
 }
 
 #logo.light-version {
-  background-color: @color-bright;
+  background-color: #fff;
   border-bottom: 1px solid #eee;
   text-align: left;
 }
