--- a/app/less/various.less
+++ b/app/less/various.less
@@ -639,7 +639,7 @@ footer, .push {
 #logo {
   float: left;
   width: 181px;
-  background-color: @color-navy-blue;
+  background-color: #fff;
   border-right: 1px solid #e4e5e7;
   height: 62px;
   text-align: center;
@@ -657,7 +657,7 @@ footer, .push {
 }
 
 #logo.light-version {
-  background-color: #fff;
+  background-color: @color-bright;
   border-bottom: 1px solid #eee;
   text-align: left;
 }
@@ -765,7 +765,7 @@ footer, .push {
 }
 
 #side-menu {
-  background: @color-bright;
+  //background: @color-bright;
 }
 
 #side-menu li a, #side-menu li p {
@@ -806,7 +806,7 @@ footer, .push {
 
 #side-menu li .nav-second-level li a.active {
   color: #444;
-  border-left: 3px solid #82BC4B;
+  border-left: 2px solid #82BC4B;
   background-color: #F6F8F9;
 }
 
@@ -828,7 +828,7 @@ footer, .push {
 
 #side-menu li .nav-second-level li ul li.active {
   color: #777;
-  border-left: 3px solid #82BC4B;
+  border-left: 2px solid #82BC4B;
   background-color: #F6F8F9;
 }
 
