--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -15,23 +15,13 @@
                 </ul>
             </div>
 
-            <div id="hbreadcrumb" class="pull-right">
-                <ol class="hbreadcrumb">
-                    <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="community.dashboard({location_path: nav.location.key, community: nav.location})">
-                        <span ng-if="nav.location.profile.name">&nbsp;&nbsp;{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
-                    </li>
-                    <li ng-if="nav.community.type == 'user' || nav.community.type == 'company'">
-                        &nbsp;&nbsp;{{ nav.community.profile.name }}&nbsp;&nbsp;/
-                    </li>
-                    <li ng-if="nav.community.type !== 'user' && nav.community.type !== 'company'"><a ui-sref="community.dashboard({community_path: nav.community.key, community: nav.community})"><span ng-if="nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.community_profiles[nav.location_path].name }}</span>
-                        <span ng-if="!nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.profile.name }}</span>
-                        &nbsp;&nbsp;/</a>
-                    </li>
-                    <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
-                        <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
-                        <span ng-if="$last">&nbsp;&nbsp;{{ $state.params.pageTitle || nav.community.type[0].toUpperCase() + nav.community.type.slice(1) }}</span>
-                    </li>
-                </ol>
+            <div class="pull-right">
+                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" class="nav-third-level" ng-click="nav.invitePeople();">
+                    <a style="color: #aaa;">+&nbsp;&nbsp;Invite People</a>
+                </li>
+                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" class="nav-third-level" ng-click="nav.addCompany();">
+                    <a style="color: #aaa;">+&nbsp;&nbsp;Add Company</a>
+                </li>
             </div>
         </div>
     </div>
