--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -3,8 +3,8 @@
         <div class="col-md-4" style="padding-top:10px;">
             <div class="hpanel">
                 <div class="panel-body" style="height: 85px;">
-                    <div class="pull-left col-sm-6" style="padding-left:0;">
-                        <a ui-sref="community.dashboard({community_path: nav.community.key, community: nav.community})">
+                    <div class="pull-left" style="padding-left:0;">
+                        <a ui-sref="community.dashboard({community_path: nav.community.key, community: nav.community})" style="white-space:nowrap;">
                             <h2 ng-if="nav.community.community_profiles[nav.location_path]" class="font-light m-b-xs">{{ nav.community.community_profiles[nav.location_path].name }}</h2>
                             <h2 ng-if="!nav.community.community_profiles[nav.location_path]" class="font-light m-b-xs">{{ nav.community.profile.name }}</h2>
                         </a>
@@ -21,7 +21,7 @@
             <div class="hpanel">
                 <div class="panel-body" style="height: 85px;">
                     <div style="padding-right:0;">
-                        <div ng-repeat="p in nav.top.parents | limitTo: 3" style="padding-left: 0; padding-right: 0; ">
+                        <div ng-repeat="p in dashboard.top.parents | limitTo: 3" style="padding-left: 0; padding-right: 0; ">
                             <div class="col-xs-4" style="margin-top:-3px; padding-left: 0; padding-right: 0; text-align: right;"><a ui-sref="community.dashboard({community_path: p.label, community: nav.communities[p.label], query: '*', location_path: nav.location.key})" style="white-space:nowrap;">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></div>
                             <div class="col-xs-8" style="padding-left: 10px; padding-right: 0;"><progressbar value="p.value" max="nav.max" type="success" class="progress-small full"></progressbar></div>
                         </div>
@@ -35,14 +35,14 @@
                     <div class="col-xs-8">
                         <div class="pull-left">
                             <h2 class="font-light m-b-xs">Leaders</h2>
-                            <div ng-repeat="lead in nav.top.leaders | limitTo: 5" style="float:left;">
+                            <div ng-repeat="lead in dashboard.top.leaders | limitTo: 5" style="float:left;">
                                 <a class="text-info" ui-sref="user.dashboard({profile: lead.value, location_path: lead.path.key, community: {}})">
                                     <small>
                                         <span ng-if="$last && $index !== 0">
                                             &nbsp;and
                                         </span>
                                         &nbsp;{{lead.value.profile.name}}
-                                        <span ng-if="!$last && nav.top.leaders.length > 2">
+                                        <span ng-if="!$last && dashboard.top.leaders.length > 2">
                                             ,
                                         </span>
                                     </small>
@@ -71,7 +71,7 @@
                             <div class="stats-title">
                                 <a ui-sref="{{'company.list' + nav.nav_url}}">
                                     <h3>Companies</h3>
-                                    <h1 style="color:#34495E;">{{nav.top.companies.count}}</h1>
+                                    <h1 style="color:#34495E;">{{dashboard.top.companies.count}}</h1>
                                 </a>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="panel-footer" style="background: #fff;">
-                        <div ng-repeat="item in nav.top.companies.entries | limitTo: 3">
+                        <div ng-repeat="item in dashboard.top.companies.entries | limitTo: 3">
                             <div style="margin-right: -2px; margin-bottom:-5px;">
                                 <div ng-if="$first" style="padding-top:5px;"></div>
                                 <div class="row" ng-include="'components/companies/company.list.item.html'"></div>
@@ -99,7 +99,7 @@
                             <div class="stats-title pull-left">
                                 <a ui-sref="{{'user.list' + nav.nav_url}}">
                                     <h3>People</h3>
-                                    <h1 class="text-info">{{nav.top.people.count}}</h1>
+                                    <h1 class="text-info">{{dashboard.top.people.count}}</h1>
                                 </a>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="panel-footer" style="background: #fff;">
-                        <div ng-repeat="item in nav.top.people.entries | limitTo: 3">
+                        <div ng-repeat="item in dashboard.top.people.entries | limitTo: 3">
                             <div style="margin-right: -2px; margin-bottom:-5px;">
                                 <div ng-if="$first" style="padding-top:5px;"></div>
                                 <div class="row" ng-include="'components/users/user.list.item.html'"></div>
@@ -130,7 +130,7 @@
                         <small class="small-column-title"># Companies</small>
                     </div>
 
-                    <div class="panel-body" ng-repeat="item in nav.top.parents | limitTo: 5">
+                    <div class="panel-body" ng-repeat="item in dashboard.top.parents | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4></a>
@@ -152,11 +152,11 @@
                         <small class="small-column-title"># Companies</small>
                     </div>
 
-                    <div class="panel-body" ng-repeat="item in nav.top.industries.entries | limitTo: 5">
+                    <div class="panel-body" ng-repeat="item in dashboard.top.industries.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="(item.count/nav.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <progressbar ng-attr-value="(item.count/dashboard.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number number-column">{{item.count}}</span>
@@ -174,11 +174,11 @@
                         <small class="small-column-title"># People</small>
                     </div>
 
-                    <div class="panel-body" ng-repeat="item in nav.top.skills.entries | limitTo: 5">
+                    <div class="panel-body" ng-repeat="item in dashboard.top.skills.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="(item.count/nav.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number number-column">{{item.count}}</span>
