--- a/app/less/various.less
+++ b/app/less/various.less
@@ -716,12 +716,12 @@ footer, .push {
 
 /* Menu */
 
-#header-nav {
+.header-nav {
   list-style: none;
   margin-left: -32px;
 }
 
-#header-nav li a {
+.header-nav li a {
   font-size: 14px;
   font-variant: small-caps;
   color: #9B9B9B;
@@ -729,21 +729,21 @@ footer, .push {
   padding: 11px 0;
 }
 
-#header-nav li {
+.header-nav li {
   float: left;
   margin-right: 20px;
   height: 42px;
 }
 
-#header-nav li a:hover, #header-nav li a:focus {
+.header-nav li a:hover, .header-nav li a:focus {
   color: #444;
 }
 
-#header-nav li.active {
+.header-nav li.active {
   border-bottom: 2px solid #82BC4B;
 }
 
-#header-nav li.active a {
+.header-nav li.active a {
   color: #444;
 }
 
