--- a/app/less/various.less
+++ b/app/less/various.less
@@ -792,6 +792,10 @@ footer, .push {
   font-weight: bold;
 }
 
+#side-menu li.active .nav-second-level li a:hover {
+  background-color: #EDEEEF !important;
+}
+
 #side-menu li .nav-second-level li a {
   padding: 9px 10px 8px 25px;
   color: #555;
