--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -27,12 +27,13 @@
 
 
             <div class="pull-right">
-                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" class="nav-third-level" ng-click="nav.invitePeople();">
-                    <a style="color: #aaa;">+&nbsp;&nbsp;Invite People</a>
-                </li>
-                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" class="nav-third-level" ng-click="nav.addCompany();">
-                    <a style="color: #aaa;">+&nbsp;&nbsp;Add Company</a>
-                </li>
+                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
+                    <button class="btn btn-sm btn-success" ng-click="nav.addCompany();" style="font-size: 12px; color: #fff;">Add Company</button>
+                </div>
+
+                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
+                    <button class="btn btn-sm btn-info" ng-click="nav.invitePeople();" style="font-size: 12px; color: #fff;">Invite People</button>
+                </div>
             </div>
         </div>
     </div>
