added industry filters

--- a/app/components/users/user.list.html
+++ b/app/components/users/user.list.html
@@ -47,10 +47,10 @@
                     </ul>
                 </div>
             </div>
-            <!--
+
             <div class="hpanel hnavyblue" ng-if="users.community.type !== 'cluster'">
                 <div class="panel-footer top" style="font-size: 17px;">
-                    <strong>Cluster</strong> Filters
+                    <strong>Industry</strong> Filters
                     <div loading-bars ng-show="users.loadingCluster" style="display: inline;"></div>
                 </div>
                 <div class="panel-body filternav">
@@ -59,14 +59,14 @@
                             <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> All</a>
                         </li>
                         <hr style="margin: 10px 0 10px 0;">
-                        <li ng-repeat="cluster in nav.clusters" ng-class="{'active':users.selectedClusters.indexOf(cluster.key) >= 0}" ng-click="users.loadingCluster=true;  users.allClusters=false; users.filterClusters(cluster.key);">
-                            <a><i class="fa {{cluster.profile.icon}}"></i> {{cluster.profile.name}}</a>
+                        <li ng-repeat="cluster in nav.top.parents" ng-class="{'active':users.selectedClusters.indexOf(cluster.label) >= 0}" ng-click="users.loadingCluster=true;  users.allClusters=false; users.filterClusters(cluster.label);">
+                            <a>{{cluster.label[0].toUpperCase() + cluster.label.slice(1)}}</a>
                         </li>
                     </ul>
                 </div>
             </div>
-            -->
-            <div class="hpanel hblue">
+
+            <!--<div class="hpanel hblue">
                 <div class="panel-footer top" style="font-size: 17px;">
                     <strong>Network</strong> Filters
                     <div loading-bars ng-show="users.loadingNetwork" style="display: inline;"></div>
@@ -82,7 +82,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
+
         </div>
 
 
